// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots MediaCard With Image 1`] = `
<div
  className="MuiPaper-root MuiCard-root makeStyles-card MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardMedia-root makeStyles-cardMedia"
    style={
      Object {
        "backgroundImage": "url(\\"https://cf.geekdo-images.com/S3ybV1LAp-8SnHIXLLjVqA__original/img/j-pfXZ_0GmOowohzD_T6NDAWGSA=/0x0/pic1534148.jpg\\")",
      }
    }
    title="Pandemic"
  />
  <div
    className="MuiCardContent-root makeStyles-cardContent"
  >
    <h2
      className="MuiTypography-root makeStyles-title MuiTypography-h5 MuiTypography-gutterBottom"
    >
      Pandemic
    </h2>
    <p
      className="MuiTypography-root makeStyles-description MuiTypography-body1"
    >
      In Pandemic, several virulent diseases have broken out simultaneously all over the world! The players are disease-fighting specialists whose mission is to treat disease hotspots while researching cures for each of four plagues before they get out of hand.

The game board depicts several major population centers on Earth. On each turn, a player can use up to four actions to travel between cities, treat infected populaces, discover a cure, or build a research station. A deck of cards provides the players with these abilities, but sprinkled throughout this deck are Epidemic! cards that accelerate and intensify the diseases' activity. A second, separate deck of cards controls the "normal" spread of the infections.

Taking a unique role within the team, players must plan their strategy to mesh with their specialists' strengths in order to conquer the diseases. For example, the Operations Expert can build research stations which are needed to find cures for the diseases and which allow for greater mobility between cities; the Scientist needs only four cards of a particular disease to cure it instead of the normal five—but the diseases are spreading quickly and time is running out. If one or more diseases spreads beyond recovery or if too much time elapses, the players all lose. If they cure the four diseases, they all win!

The 2013 edition of Pandemic includes two new characters—the Contingency Planner and the Quarantine Specialist—not available in earlier editions of the game.

Pandemic is the first game in the Pandemic series.
    </p>
  </div>
</div>
`;

exports[`Storyshots MediaCard With Out Image 1`] = `
<div
  className="MuiPaper-root MuiCard-root makeStyles-card MuiPaper-elevation1 MuiPaper-rounded"
>
  <span
    className="MuiSkeleton-root MuiSkeleton-text makeStyles-cardMedia MuiSkeleton-pulse"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  />
  <div
    className="MuiCardContent-root makeStyles-cardContent"
  >
    <h2
      className="MuiTypography-root makeStyles-title MuiTypography-h5 MuiTypography-gutterBottom"
    >
      Catan: First Adventure Print & Play
    </h2>
    <p
      className="MuiTypography-root makeStyles-description MuiTypography-body1"
    >
      The kids on Catan are very adventurous. They learn to sail at a very young age and like to spend their time sailing around the small offshore islands and playing exciting games. Today you are playing pirates.

You and your friends race to build small pirate lairs and, ultimately, a great pirate fort. The first to do so will be crowned the ruler of the pirates!

For this game, one friend pretends to be a Ghost Captain and tries to prevent the others from completing their lairs. Who among you will be the most powerful pirate?

Print, craft, and play this special kids' game, which is released as a part of the CATAN #StayAndPlay campaign, which has the goal of making home-staying during the COVID-19 pandemic a little more fun.
    </p>
  </div>
</div>
`;

exports[`Storyshots Unsplash Default 1`] = `
Array [
  <span>
    Photo by 
    <a
      href="https://unsplash.com/@jacielmelnik?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
      rel="noreferrer"
      target="_blank"
    >
      Jaciel Melnik
    </a>
     on 
    <a
      href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
      rel="noreferrer"
      target="_blank"
    >
      Unsplash
    </a>
  </span>,
  <div
    style={
      Object {
        "boxSizing": "border-box",
        "display": "block",
        "margin": 0,
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "boxSizing": "border-box",
          "display": "block",
          "paddingTop": "56.09375%",
        }
      }
    />
    <img
      alt="The Green Meeples"
      decoding="async"
      sizes="(max-width: 640px) 640px, (max-width: 750px) 750px, (max-width: 828px) 828px, (max-width: 1080px) 1080px, (max-width: 1200px) 1200px, (max-width: 1920px) 1920px, (max-width: 2048px) 2048px, 3840px"
      src="/_next/image?url=%2Fgreen-meeples.jpg&w=3840&q=75"
      srcSet="/_next/image?url=%2Fgreen-meeples.jpg&w=640&q=75 640w, /_next/image?url=%2Fgreen-meeples.jpg&w=750&q=75 750w, /_next/image?url=%2Fgreen-meeples.jpg&w=828&q=75 828w, /_next/image?url=%2Fgreen-meeples.jpg&w=1080&q=75 1080w, /_next/image?url=%2Fgreen-meeples.jpg&w=1200&q=75 1200w, /_next/image?url=%2Fgreen-meeples.jpg&w=1920&q=75 1920w, /_next/image?url=%2Fgreen-meeples.jpg&w=2048&q=75 2048w, /_next/image?url=%2Fgreen-meeples.jpg&w=3840&q=75 3840w"
      style={
        Object {
          "border": "none",
          "bottom": 0,
          "boxSizing": "border-box",
          "display": "block",
          "height": 0,
          "left": 0,
          "margin": "auto",
          "maxHeight": "100%",
          "maxWidth": "100%",
          "minHeight": "100%",
          "minWidth": "100%",
          "objectFit": undefined,
          "objectPosition": undefined,
          "padding": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "visibility": "visible",
          "width": 0,
        }
      }
    />
  </div>,
]
`;
